feat: Revamp personal site structure by removing the About page and adding a dedicated Work page. The About page was deemed redundant as its content is now integrated into the Work page, which provides a clearer focus on professional experience and skills. This change aims to enhance user navigation and improve the overall presentation of the author's work and expertise.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ site.title }}</h1>
 
-<p>Hey there, I'm {{ site.author.name }} and I'm a {{ site.author.role }} at <a href="{{ site.company_url }}">{{ site.author.company }}</a>.</p>
+<p>Hey there, I'm {{ site.author.name }} and I'm a {{ site.author.role }} at <a href="{{ site.company_url }}">{{ site.author.company }}</a>. You can find my work <a href="/work">here</a>.</p>
 
 <div class="social-links">
     <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" rel="noopener" title="LinkedIn">
