feat: Add Work page to showcase professional experience and update index content for clarity. This change introduces a dedicated Work page to highlight the author's role and responsibilities, enhancing user navigation. Additionally, the index.html content was streamlined to focus on key interests, improving overall presentation.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
     </a>
 </div>
 
-<p>Outside of tech, I love traveling, watching movies, and diving into books! I also enjoy capturing the world through my lens — check out my <a href="https://instagram.com/{{ site.photography_instagram }}" target="_blank">Photography Page</a>.</p>
+<p>Outside of tech, I love traveling and watching movies! I also enjoy capturing the world through my lens — check out my <a href="https://instagram.com/{{ site.photography_instagram }}" target="_blank">Photography Page</a>.</p>
 
 <p>I'd love to hear from you. I'm <a href="mailto:{{ site.email }}">{{ site.email }}</a> on email.</p>
 
