--- a/index.html
+++ b/index.html
@@ -3,31 +3,35 @@ layout: default
 title: Home
 ---
 
-<header class="site-header">
-    <h1>{{ site.title }}</h1>
-</header>
+<div class="hero-section">
+    <h1>I'm Sourabh,</h1>
+    <h1>an Software Engineer</h1>
+    <h1>interested in writing code. 👋</h1>
 
-<div class="intro">
-    <p>Hey there, I'm Sourabh Khot and I'm a Software Engineer at <a href="{{ site.company_url }}" target="_blank" rel="noopener noreferrer">Tacitbase</a>.</p>
-    
-    <p>Outside of tech, I love traveling and watching movies! I also enjoy capturing the world through my lens — check out my <a href="https://instagram.com/{{ site.photography_instagram }}" target="_blank" rel="noopener noreferrer">Photography Page</a>.</p>
-    
-    <p>I'd love to hear from you at <a href="mailto:sourabhkhot65@gmail.com">sourabhkhot65@gmail.com</a>.</p>
-</div>
+    <div class="hero-description">
+        <p>With experience in building scalable systems, I focus on developing efficient solutions using Go, Microservices, and AI. Currently building at <a href="https://tacitbase.com" target="_blank" rel="noopener noreferrer">Tacitbase</a>.</p>
+        <p>Open to roles in Backend Engineering, Infrastructure, and AI/ML.</p>
+    </div>
 
-<div class="social-links">
-    <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn">
-        <i class="fab fa-linkedin"></i>
-    </a>
-    <a href="https://x.com/{{ site.twitter_username }}" target="_blank" rel="noopener noreferrer" aria-label="Follow me on X (Twitter)">
-        <i class="fab fa-x-twitter"></i>
-    </a>
-    <a href="https://github.com/{{ site.github_username }}" target="_blank" rel="noopener noreferrer" aria-label="Check out my GitHub projects">
-        <i class="fab fa-github"></i>
-    </a>
-    <a href="{{ '/feed.xml' | relative_url }}" aria-label="Subscribe to my RSS feed">
-        <i class="fas fa-rss"></i>
-    </a>
+    <div class="contact-info">
+        <p>Pune, Maharashtra</p>
+        <div class="social-links">
+            <a href="mailto:sourabhkhot65@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Email me">
+                <i class="fas fa-envelope"></i>
+            </a>
+            <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" rel="noopener noreferrer" aria-label="Connect on LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/{{ site.github_username }}" target="_blank" rel="noopener noreferrer" aria-label="View GitHub profile">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://x.com/{{ site.twitter_username }}" target="_blank" rel="noopener noreferrer" aria-label="Follow on X/Twitter">
+                <i class="fab fa-x-twitter"></i>
+            </a>
+        </div>
+    </div>
+
+    <a href="/work" class="cta-button">Check out my work!</a>
 </div>
 
 <div class="hr"></div>
@@ -63,6 +67,72 @@ title: Home
 </main>
 
 <style>
+.hero-section {
+    padding: 4rem 0;
+    max-width: 42rem;
+}
+
+.hero-section h1 {
+    font-size: 2.5rem;
+    line-height: 1.2;
+    margin: 0;
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+}
+
+.hero-description {
+    margin: 2rem 0;
+    font-size: 1.125rem;
+    line-height: 1.7;
+    color: var(--text-secondary);
+}
+
+.hero-description p {
+    margin-bottom: 1rem;
+}
+
+.hero-description a {
+    color: var(--text-primary);
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 2px;
+}
+
+.hero-description a:hover {
+    color: var(--link-color);
+}
+
+.cta-button {
+    display: inline-block;
+    background: #000;
+    color: #fff;
+    padding: 0.75rem 1.5rem;
+    border-radius: 0.375rem;
+    font-weight: 500;
+    font-size: 1rem;
+    text-decoration: none;
+    transition: opacity 0.2s ease;
+}
+
+.cta-button:hover {
+    opacity: 0.9;
+    text-decoration: none;
+}
+
+@media (max-width: 640px) {
+    .hero-section {
+        padding: 2rem 0;
+    }
+
+    .hero-section h1 {
+        font-size: 2rem;
+    }
+
+    .hero-description {
+        font-size: 1rem;
+    }
+}
+
 .site-header {
     margin-bottom: 2rem;
 }
@@ -82,6 +152,12 @@ title: Home
 
 .intro p:last-child {
     margin-bottom: 0;
+}
+
+.work-link {
+    display: inline-block;
+    margin-left: 0.25rem;
+    font-weight: 500;
 }
 
 .year-section {
@@ -118,9 +194,30 @@ title: Home
     margin: 0;
 }
 
-@media (max-width: 640px) {
-    .intro {
-        font-size: 1rem;
-    }
+.contact-info {
+    margin: 2rem 0;
+}
+
+.contact-info p {
+    color: var(--text-secondary);
+    margin-bottom: 1rem;
+    font-size: 1rem;
+}
+
+.social-links {
+    display: flex;
+    gap: 1.25rem;
+    margin-bottom: 2rem;
+}
+
+.social-links a {
+    color: var(--text-secondary);
+    font-size: 1.25rem;
+    transition: color 0.2s ease;
+}
+
+.social-links a:hover {
+    color: var(--text-primary);
+    text-decoration: none;
 }
 </style> 
