feat: Revise homepage and writing page for clarity and engagement. The homepage now features a more descriptive introduction, while the writing page has improved content organization and styling. These updates aim to enhance user experience and better showcase skills and insights.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ title: Home
 
 <div class="hero-section">
     <h1>I'm Sourabh,</h1>
-    <h1>a Software Engineer</h1>
+    <h1>a Software Engineer who loves solving problems.</h1>
 
     <div class="hero-description">
-        <p>A problem solver at heart, I enjoy building scalable systems and crafting efficient solutions. Currently building at <a href="https://tacitbase.com" target="_blank" rel="noopener noreferrer">Tacitbase</a>.</p>
+        <p>With over a year of experience, I work on building solutions that solve real problems. Currently, I’m part of the team at <a href="https://tacitbase.com" target="_blank" rel="noopener noreferrer">Tacitbase</a>.</p>
     </div>
 
     <blockquote class="quote">
@@ -30,6 +30,12 @@ title: Home
             </a>
             <a href="https://x.com/{{ site.twitter_username }}" target="_blank" rel="noopener noreferrer" aria-label="Follow on X/Twitter">
                 <i class="fab fa-x-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com/{{ site.instagram_username }}" target="_blank" rel="noopener noreferrer" aria-label="Follow on Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="/feed.xml" target="_blank" rel="noopener noreferrer" aria-label="Follow on RSS">
+                <i class="fas fa-rss"></i>
             </a>
         </div>
     </div>
