fix: Update writing page description for clarity. The change simplifies the mention of AI, making it more concise and focused. This aims to enhance readability and better convey the topics covered in the writing section.

--- a/writing.html
+++ b/writing.html
@@ -6,7 +6,7 @@ title: Writing
 <div class="writing-section">
     <div class="section-intro">
         <h1>Writing</h1>
-        <p>Writes about software engineering, Applied AI, systems design, technology and life.</p>
+        <p>Writes about software engineering, AI, systems design, technology and life.</p>
     </div>
 
     <div class="posts-list">
