ref: Improve layout and styling across Projects, Work, and Writing pages for enhanced readability. Adjustments include centralized sections, updated font sizes, and consistent line heights. These changes aim to create a more cohesive and visually appealing user experience.

--- a/work.html
+++ b/work.html
@@ -35,6 +35,7 @@ title: Work
 <style>
 .work-section {
     max-width: 42rem;
+    margin: 0 auto;
     padding: 4rem 0;
 }
 
@@ -53,6 +54,7 @@ title: Work
     font-size: 1.125rem;
     color: var(--text-secondary);
     margin: 0;
+    line-height: 1.6;
 }
 
 .job {
