--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,7 @@ title: Projects
 <style>
 .projects-section {
     max-width: 42rem;
+    margin: 0 auto;
     padding: 4rem 0;
 }
 
@@ -65,6 +66,7 @@ title: Projects
     font-size: 1.125rem;
     color: var(--text-secondary);
     margin: 0;
+    line-height: 1.6;
 }
 
 .projects-grid {
@@ -114,7 +116,7 @@ title: Projects
 }
 
 .project-description {
-    font-size: 0.875rem;
+    font-size: 0.9375rem;
     line-height: 1.6;
     color: var(--text-secondary);
     margin: 0 0 1rem;
@@ -129,7 +131,7 @@ title: Projects
 .tech-tag {
     font-size: 0.75rem;
     color: var(--text-secondary);
-    background: var(--bg-secondary, #f7fafc);
+    background: var(--bg-secondary);
     padding: 0.25rem 0.75rem;
     border-radius: 1rem;
 }
@@ -145,6 +147,10 @@ title: Projects
 
     .project-card {
         padding: 1.25rem;
+    }
+
+    .project-description {
+        font-size: 0.875rem;
     }
 }
 </style> 
