fix: Remove unnecessary whitespace in interests section of homepage for cleaner presentation. This change aims to enhance the overall readability and visual appeal of the content, ensuring a more polished user experience.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@ title: Home
 <div class="interests-section">
     <h2>Outside of tech</h2>
     <p>
-        Outside of work, I enjoy exploring stories through <a href="https://letterboxd.com/sourabhk65/" target="_blank" rel="noopener noreferrer">movies</a> and expressing creativity through <a href="https://www.instagram.com/life.in.pixels1/" target="_blank" rel="noopener noreferrer">photography</a>. And like any true Spider-Man fan, I believe that <a href="https://en.wikipedia.org/wiki/With_great_power_comes_great_responsibility" target="_blank" rel="noopener noreferrer">with great power comes great responsibility</a>.
+        I enjoy exploring stories through <a href="https://letterboxd.com/sourabhk65/" target="_blank" rel="noopener noreferrer">movies</a> and expressing creativity through <a href="https://www.instagram.com/life.in.pixels1/" target="_blank" rel="noopener noreferrer">photography</a>. And like any true Spider-Man fan, I believe that <a href="https://en.wikipedia.org/wiki/With_great_power_comes_great_responsibility" target="_blank" rel="noopener noreferrer">with great power comes great responsibility</a>.
     </p>
-        
 </div>
 
 <main>
