ref : changed company name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
     <h1>a Software Engineer who loves solving problems.</h1>
 
     <div class="hero-description">
-        <p>With over a year of experience, I work on building solutions that solve real problems. Currently, I'm part of the team at <a href="https://tacitbase.com" target="_blank" rel="noopener noreferrer">Tacitbase</a>.</p>
+        <p>With over one and a half years of experience, I work on building solutions that solve real problems. Currently, I'm part of the team at <a href="https://nonstopio.com" target="_blank" rel="noopener noreferrer">Nonstop IO</a>.</p>
     </div>
 
     <blockquote class="quote">
