ref : add work experience for nonstopio

--- a/work.html
+++ b/work.html
@@ -13,9 +13,9 @@ title: Work
         <div class="job-header">
             <div class="job-title">
                 <h2>Software Engineer</h2>
-                <span class="company">Tacitbase</span>
+                <span class="company"><a href="https://www.tacitbase.com/" target="_blank">Tacitbase</a></span>
             </div>
-            <time class="duration">January 2024 – Present</time>
+            <time class="duration">January 2024 – May 2025 </time>
         </div>
 
         <ul class="achievements">
@@ -28,6 +28,24 @@ title: Work
             <li>Rapidly designed and implemented an admin portal using React.js, empowering stakeholders with seamless access to key operational insights about the product.</li>
             <li>Designed and implemented a Slack app-based alerting system with OAuth authentication to handle complex recruitment related actions, improving workflow efficiency.</li>
             <li>Built a single-click local development setup for 20+ microservices, drastically reducing onboarding time and improving developer productivity.</li>
+        </ul>
+    </div>
+
+    <br>
+
+    <div class="job">
+        <div class="job-header">
+            <div class="job-title">
+                <h2>Software Engineer</h2>
+                <span class="company"><a href="https://www.nonstopio.com/" target="_blank">Nonstop IO Pvt Ltd.</a></span>
+            </div>
+            <time class="duration">May 2025 – Present </time>
+        </div>
+
+        <ul class="achievements">
+            <li>Created a web scraping tool using Python and Streamlit to collect and display data from an e-commerce website.</li>
+            <li>Set up Google Cloud Functions to track website visitors by IP address and store the data in Firestore.</li>
+            <li>Built an internal company portal using NestJS and Supabase with role-based access control, and deployed it on Vercel.</li>
         </ul>
     </div>
 </div>
