fix : changed role at nonstopio

--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@ title: Work
     <div class="job">
         <div class="job-header">
             <div class="job-title">
-                <h2>Software Engineer</h2>
+                <h2>SDE 1</h2>
                 <span class="company"><a href="https://www.tacitbase.com/" target="_blank">Tacitbase</a></span>
             </div>
             <time class="duration">January 2024 – May 2025 </time>
